--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon server.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "20.x.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
